# siemens-converter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: development.md  uso.md
openspec/: project.md
scripts/: pyinstaller_entry.py
src/siemens_converter/: __init__.py  __main__.py  models.py  parser.py  sorter.py  styles.py  template.xlsx  writer.py
tests/: test_cli.py  test_models.py  test_parser.py  test_template.py  test_writer.py
tests/fixtures/: FC_report_TEST_9999_2026-01-15.xls
