[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siemens-converter"
version = "0.1.0"
description = "Convert Siemens FC_report files to XLSX with heating/water cost apportionment"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
siemens-converter = "siemens_converter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
siemens_converter = ["template.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
